# git-sparta

./: .gitattributes  .gitmodules  AGENTS.md  Cargo.toml  README.md  flake.nix  generate_sparse_list.sh  rust-toolchain.toml  setup_submodule.sh  setup_submodules.sh  teardown_submodule.sh
crates/tui-searcher/: Cargo.toml  README.md
crates/tui-searcher/examples/: demo.rs  filesystem.rs
crates/tui-searcher/src/: app.rs  input.rs  lib.rs  tables.rs  tabs.rs  types.rs  utils.rs
crates/tui-searcher/src/theme/: light.rs  mod.rs  slate.rs  solarized.rs
examples/: demo.rs  fetch_single_file.rs  workspaces.rs
examples/common/: mod.rs
lib/: common.sh  tui.sh
nix/modules/: devshell.nix  package.nix  pre-commit.nix  rust.nix  treefmt.nix
src/: config.rs  git.rs  lib.rs  main.rs  output.rs  picker.rs  tui.rs
src/commands/: generate.rs  mod.rs  setup.rs  teardown.rs
src/git/: attributes.rs  cmd.rs  config.rs  lfs.rs  mod.rs  repository.rs  sparse.rs  submodule.rs
src/tui/: app.rs  mod.rs  tests.rs  types.rs  utils.rs
