[package]
name = "rust-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dunce = "1.0.5"
gix = "0.73.0"
owo-colors = "4.2.3"
pathdiff = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.14.0"
walkdir = "2.5.0"
