[package]
name = "git-sparta"
version = "0.1.0"
edition = "2024"
description = "Git Sparse Tagging - Manage sparse submodule checkouts based on git attributes"
authors = ["Albert O'Shea <albertoshea2@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
dunce = "1.0.5"
gix = "0.73.0"
owo-colors = "4.2.3"
pathdiff = "0.2.3"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
walkdir = "2.5.0"
frizbee = { path = "vendor/frizbee" }