[package]
name = "git-sparta"
version = "0.1.0"
edition = "2024"
description = "Git Sparse Tagging - Manage sparse submodule checkouts based on git attributes"
authors = ["Albert O'Shea"]
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dunce = "1.0"
gix = "0.73"
owo-colors = "4.2"
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.23"
walkdir = "2.5"
frizbee = "0.5"
nucleo-picker = "0.9.0"
devicons = "0.6"
